test/src/e2e_vm_tests/test_programs/should_fail/unclosed_multiline_comment/src/main.sw
script;

/*fn main() {
    let x = 0; 
}
